--- a/fba/config
+++ b/fba/config
@@ -19,4 +19,5 @@ mrtrix3t="singularity exec -e -B $base,$scratch /PATH/TO/mrtrix_ss3t.img" #leave
 mrtrix="singularity exec -e -B $base,$scratch /PATH/TO/mrtrix_3.0.3.img" #leave as empty string if mrtrix is installed locally and in your path
 fsl="singularity exec -e -B $base,$scratch /PATH/TO/fsl_new.img" #leave as empty string if fsl is installed locally and in your path
 tractseg="singularity exec -e -B $base,$scratch /PATH/TO/tractseg_23.img" #leave as empty string if tractseg is installed locally and in your path
+modelarray="singularity exec -e -B $base,$scratch /PATH/TO/modelarray_0.1.2.img" #leave as empty string if modelarray is installed locally and in your path
 Rscript="/PATH/TO/anaconda3/envs/r-brain/bin/Rscript" # Path to Rscript command that has ModelArray installed (leave as empty string if it is on path by default)
