--- a/fba/config
+++ b/fba/config
@@ -14,7 +14,7 @@ fodf_shells='2000' # Besides 0, all shells you want included for FBA separated b
 single_multi='single' # 'single' - use SS3T for single shell FOD fit, 'multi' - use MSMT for multishell FOD fit. This should correspond to what you choose for the "fodf_shells" variable.
 
 # LOAD SOFTWARES (either as modules, singularity containers, or additions to PATH)
-module add openmind/singularity/3.9.5
+#module add openmind/singularity/3.9.5 # or other way of adding singularity to your path
 mrtrix3t="singularity exec -e -B $base,$scratch /PATH/TO/mrtrix_ss3t.img" #leave as empty string if mrtrix3t is installed locally and in your path
 mrtrix="singularity exec -e -B $base,$scratch /PATH/TO/mrtrix_3.0.3.img" #leave as empty string if mrtrix is installed locally and in your path
 fsl="singularity exec -e -B $base,$scratch /PATH/TO/fsl_new.img" #leave as empty string if fsl is installed locally and in your path
